# cardbot

./: Cargo.toml
src/: lib.rs  main.rs
src/deck_service/: mod.rs  service.rs
src/rest_client/: mod.rs
