[package]
name = "cardbot"
version = "0.1.0"
authors = ["Jesse Mazzella <jessemazzella@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
reqwest = "0.10.1"
serde = "1.0.104"
serde_derive = "1.0.104"